--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel=”stylesheet” href=”https://misako666666.github.io/wcbcafe/style.css”/>
     </head>
 
     <body>
